changed gridContainer classname to buttons

--- a/src/Buttons/style.css
+++ b/src/Buttons/style.css
@@ -1,17 +1,17 @@
-.gridContainer {
+.buttons {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
 @media (max-width: 767px) {
-    .gridContainer {
+    .buttons {
         grid-template-columns: 1fr;
         grid-row-gap: 10px;
         margin-bottom: 10px;
     }
 }
 
-.gridContainer__button {
+.buttons__button {
     color: teal;
     background-color: white;
     border: none;
@@ -19,10 +19,10 @@
     transition: 500ms;
 }
 
-.gridContainer__button:hover {
+.buttons__button:hover {
     color: hsl(180, 100%, 35%);
 }
 
-.gridContainer__button:disabled {
+.buttons__button:disabled {
     color: rgb(158, 158, 158);
 }
