changed list__listItem classname to list__item

--- a/src/List/style.css
+++ b/src/List/style.css
@@ -3,14 +3,14 @@
     list-style: none;
 }
 
-.list__listItem {
+.list__item {
     border-bottom: rgb(226, 226, 226) solid 2px;
     display: grid;
     grid-template-columns: auto 1fr auto;
     gap: 20px;
 }
 
-.list__listItem--hidden {
+.list__item--hidden {
     display: none;
 }
 
